bdr.BDR.scala.error
Compilation error:
BDR:2: error: not found: value c
  c=readMessage()
  ^BDR:3: error: not found: value c
  if(c=="R"){
     ^BDR:6: error: not found: value c
  }else if(c=="L"){
           ^BDR:9: error: not found: value c
  }else if(c=="I"){
           ^BDR:13: error: not found: value c
  }else if(c=="A"){
           ^BDR:15: error: not found: value c
  }else if(c=="B"){
           ^BDR:18: error: not found: value c
  }else if(c=="C"){
           ^BDR:22: error: not found: value c
  }else if(c=="Z"){
           ^BDR:24: error: not found: value c
  }else if(c=="Y"){
           ^BDR:27: error: not found: value c
  }else if(c=="X"){
           ^